--- a/manifest.json
+++ b/manifest.json
@@ -7,18 +7,19 @@
     "default_popup": "popup.html"
   },
   "background": {
-    "scripts": ["background.js", "jquery-3.4.1.js"],
+    "scripts": ["jquery-3.4.1.js", "background.js"],
     "persistent": false
   },
   "permissions": [
     "https://moodle.port.ac.uk/my/",
     "https://docs.google.com/document/*",
+    "http://localhost/*",
     "storage"
   ],
   "content_scripts": [{
     "matches": ["<all_urls>"],
     "run_at": "document_start",
-    "js": ["jquery-3.4.1.js", "arrive.min.js", "main.js", "interface.js", "mark.min.js", "js/bootstrap.js"],
+    "js": ["jquery-3.4.1.js", "arrive.min.js", "observer.js", "interface.js", "mark.min.js", "js/bootstrap.js"],
     "css": ["style.css", "css/bootstrap.css"]
    }],
    "externally_connectable": {
